--- a/linpack/README
+++ b/linpack/README
@@ -6,3 +6,32 @@ VM
 
 Docker
     docker build -t linpack .
+    
+Running linpack with numaopts <  --physcpubind=0-7,16-23 --localalloc  >, started at Thu Apr 22 22:09:36 CDT 2021
+This is a SAMPLE run script for SMP LINPACK. Change it to reflect
+the correct number of CPUs/threads, problem input files, etc..
+Thu Apr 22 22:09:36 CDT 2021
+Intel(R) Optimized LINPACK Benchmark data
+
+Current date/time: Thu Apr 22 22:09:36 2021
+
+CPU frequency:    1.197 GHz
+Number of CPUs: 2
+Number of cores: 16
+Number of threads: 16
+
+Parameters are set to:
+
+Number of tests: 1
+Number of equations to solve (problem size) : 45000
+Leading dimension of array                  : 45000
+Number of trials to run                     : 10  
+Data alignment value (in Kbytes)            : 1    
+
+Maximum memory requested that can be used=16200901024, at the size=45000
+
+=================== Timing linear equation system solver ===================
+
+Size   LDA    Align. Time(s)    GFlops   Residual     Residual(norm) Check
+45000  45000  1      249.848    243.1642 1.183147e-09 2.081622e-02   pass
+45000  45000  1      248.700    244.2863 1.183147e-09 2.081622e-02   pass
